General tidy up, moved createGraph to module. Changed graph rendering to flex. Failed to fix toltip on mobile.

--- a/react-client/src/index.css
+++ b/react-client/src/index.css
@@ -11,10 +11,10 @@ body {
 
 .s-card {
   background-color: rgba(255, 255, 255, 0.3);
-  padding: 2rem;
+  padding: 0.5rem;
   border-radius: 12px;
   /* max-width: 400px; */
-  margin: 5vh auto;
+  /* margin: 5vh auto; */
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(4px);
 }
@@ -72,6 +72,24 @@ rect {
   border-radius: 10px;
   display: none;
   opacity: .75;
+}
+
+.graph-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.graph-card {
+  flex: 1;
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 
 /* Map page */
